Ignore lack of documentation

--- a/config/yardstick.yml
+++ b/config/yardstick.yml
@@ -21,7 +21,10 @@ rules:
     exclude: []
   Summary::Presence:
     enabled: true
-    exclude: []
+    exclude:
+      - Baleog::ClassBuilder#initialize
+      - Baleog::Endpoint#initialize
+      - Baleog::Model#initialize
   Summary::Length:
     enabled: true
     exclude: []
