--- a/config/check_specs.yml
+++ b/config/check_specs.yml
@@ -1,3 +1,5 @@
 ignore:
-  - lib/baleog/version.rb
   - lib/baleog/model/field_builder.rb
+  - lib/baleog/response.rb
+  - lib/baleog/service.rb
+  - lib/baleog/version.rb
