--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,3 +44,7 @@ Style/HashTransformKeys:
 
 Style/HashTransformValues:
   Enabled: true
+
+RSpec/SubjectStub:
+  Exclude:
+    - spec/lib/baleog/adapters/loader_config_spec.rb
