--- a/config/check_specs.yml
+++ b/config/check_specs.yml
@@ -1,5 +1,7 @@
 ignore:
+  - lib/baleog/adapters/base.rb
   - lib/baleog/adapters/faraday.rb
+  - lib/baleog/adapters/response.rb
   - lib/baleog/client/model/field_builder.rb
   - lib/baleog/client/response.rb
   - lib/baleog/client/service.rb
