Ignore missing specs

--- a/config/check_specs.yml
+++ b/config/check_specs.yml
@@ -2,8 +2,10 @@ ignore:
   - lib/baleog/adapters/base.rb
   - lib/baleog/adapters/faraday.rb
   - lib/baleog/adapters/response.rb
+  - lib/baleog/client/endpoint_builder.rb
   - lib/baleog/client/model/field_builder.rb
   - lib/baleog/client/response.rb
   - lib/baleog/client/service.rb
+  - lib/baleog/client/with_endpoint_options.rb
   - lib/baleog/nesting_builder.rb
   - lib/baleog/version.rb
