--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,9 @@ inherit_from: .rubocop_todo.yml
 AllCops:
   TargetRubyVersion: 2.7
 
+AllCops:
+  NewCops: enable
+
 Metrics/BlockLength:
   Exclude:
     - 'spec/**/*_spec.rb'
